--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,30 @@
-/* developer styles go here */
+section {
+    padding: 1rem;
+}
+
+p {
+    margin-bottom: 1.5rem;
+}
+
+.horiz-content {
+    display: flex;
+    align-items: center;
+    overflow: scroll;
+    scrollbar-width: none;
+    height: 237.7px;
+}
+
+.horiz-content > div {   
+    flex: 0 0 330px;
+    height: 187px;
+    background-color: #3f1917;
+    margin: 1rem 0.5rem;
+    transition: all 150ms ease-in;
+    
+}
+
+.horiz-content > div:hover,
+.horiz-content > div:active {
+    flex: 0 0 346.5px;
+    height: 205.7px;
+}
